add_subdirectory(analysis)
add_subdirectory(audiofilter)
add_subdirectory(loopsplit)

radioify_add_module_object_library(radioify_audio
  ${CMAKE_CURRENT_SOURCE_DIR}/audio_stream.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/audio_format_options.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/audition_worker.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/audioplayback.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/ffmpegaudio.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/gmeaudio.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/gsfaudio.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/kssaudio.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/m4adecoder.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/media_formats.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/midiaudio.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/output_callback.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/pipeline_transition.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/playback_backend.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/playback_device.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/playback_source_priming.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/queued_audio_source.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/radio_filter_mode.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/radio_filter_transition.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/radio_playback.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/spsc_audio_ring.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/spsc_audio_timeline.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/playback_sources/m4a_playback_source.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/psfaudio.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/vgmaudio.cpp
)
